[package]
name = "xd-util"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["default", "serde"] }
egui-notify = "0.19.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
minio-rsc = "0.2.5"
anyhow = "*"
calamine = "0.22.1"
async-ssh2-tokio = "0.8.14"
russh = "0.51.1"

[profile.release]
lto = true
codegen-units = 1